@@ -2,6 +2,10 @@ The PBC pairing-based cryptography library. See COPYING for license.
 
 Ben Lynn
 
+Changes between PBC version 0.4.7 and 0.4.6
+
+* Bugfix: element_cmp for zero case in prime field
+
 Changes between PBC version 0.4.6 and 0.4.5
 
 * Type G pairings (embedding degree 10)
